--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -442,6 +442,7 @@
   input[type="search"] + input[type="submit"] {
     display: inline-block;
     margin-left: 1%;
+    margin-top: 0;
     width: 37%;
   }
 
